# oath-toolkit

./: .clcopying  .gitignore  .x-sc_cast_of_alloca_return_value  .x-sc_error_message_uppercase  .x-sc_m4_quote_check  .x-sc_makefile_check  .x-sc_program_name  .x-sc_prohibit_HAVE_MBRTOWC  .x-sc_prohibit_atoi_atof  .x-sc_require_config_h  .x-sc_space_tab  .x-sc_useless_cpp_parens  AUTHORS  COPYING  ChangeLog  HACKING  Makefile.am  NEWS  README  cfg.mk  configure.ac
build-aux/: oath-toolkit-version  update-copyright
doc/: announce.txt  release-process.txt
gl/: Makefile.am
gl/m4/: gnulib-cache.m4  gnulib-comp.m4
gl/tests/: Makefile.am
hotptool/: Makefile.am  configure.ac  hotptool.c  hotptool.ggo  hotptool.h2m
hotptool/build-aux/: link-warning.h
hotptool/lib/: Makefile.am  string.in.h  unistd.in.h
hotptool/m4/: gnulib-cache.m4  gnulib-comp.m4
hotptool/tests/: Makefile.am  tst_hotptool.sh
libhotp/: Makefile.am  configure.ac  hotp.c  hotp.h  libhotp.map  usersfile.c
libhotp/build-aux/: link-warning.h
libhotp/gtk-doc/: Makefile.am  libhotp-docs.sgml
libhotp/lib/: Makefile.am  dummy.c  gc-gnulib.c  gc-libgcrypt.c  gc.h  getdelim.c  getline.c  hmac-sha1.c  hmac.h  realloc.c  sha1.c  sha1.h  stdio.in.h  stdlib.in.h  string.in.h  strverscmp.c  sys_stat.in.h  unistd.in.h  wchar.in.h
libhotp/m4/: gnulib-cache.m4  gnulib-comp.m4
libhotp/tests/: Makefile.am  tst_hotp.c  tst_hotp_algo.c  tst_hotp_usersfile.c  tst_hotp_usersfile.sh  users.hotp
liboath/: Makefile.am  aux.c  aux.h  coding.c  configure.ac  errors.c  global.c  gtk-doc.make  hotp.c  liboath.map  liboath.pc.in  oath.h  oath.h.in  totp.c  usersfile.c
liboath/gl/: Makefile.am  alloca.in.h  base32.c  base32.h  basename-lgpl.c  canonicalize-lgpl.c  close.c  dirname-lgpl.c  dirname.h  dosname.h  errno.in.h  fclose.c  fflush.c  fopen.c  fpurge.c  freading.c  freading.h  fseeko.c  fstat.c  gc-gnulib.c  gc-libgcrypt.c  gc.h  getdelim.c  getline.c  hmac-sha1.c  hmac-sha256.c  hmac-sha512.c  hmac.h  lseek.c  lstat.c  malloc.c  malloca.c  malloca.h  memxor.c  memxor.h  msvc-inval.c  msvc-inval.h  msvc-nothrow.c  pathmax.h  readlink.c  (+25 more)
liboath/gl/m4/: gnulib-cache.m4  gnulib-comp.m4  valgrind-tests.m4
liboath/gl/override/m4/: valgrind-tests.m4.diff
liboath/gl/tests/: Makefile.am  link.c  test-u64
liboath/gtk-doc/: Makefile.am  liboath-docs.sgml
liboath/lib/: Makefile.am  alloca.in.h  basename-lgpl.c  canonicalize-lgpl.c  close.c  dirname-lgpl.c  dirname.h  dosname.h  errno.in.h  fclose.c  fflush.c  fopen.c  fpurge.c  freading.c  freading.h  fseeko.c  gc-gnulib.c  gc-libgcrypt.c  gc.h  getdelim.c  getline.c  hmac-sha1.c  hmac.h  lstat.c  malloca.c  malloca.h  memxor.c  memxor.h  msvc-inval.c  msvc-nothrow.h  pathmax.h  readlink.c  realloc.c  rename.c  rmdir.c  same-inode.h  sha1.c  sha1.h  stat.c  stdbool.in.h  (+14 more)
liboath/m4/: gnulib-cache.m4  gnulib-comp.m4
liboath/man/: Makefile.am  gdoc.mk
liboath/tests/: Makefile.am  expect.hotp  expect.oath  tst_basic.c  tst_coding.c  tst_errors.c  tst_hotp_algo.c  tst_hotp_usersfile.c  tst_hotp_usersfile.sh  tst_hotp_validate.c  tst_totp_algo.c  tst_totp_validate.c  tst_usersfile.c  tst_usersfile.sh  users.hotp  users.oath
libpskc/: Makefile.am  README  build.c  configure.ac  container.c  data.c  enums.c  errors.c  global.c  internal.h  libpskc.map  libpskc.pc.in  output.c  parser.c  pskc.h.in  sign.c  validate.c
libpskc/examples/: Makefile.am  pskc-figure6-debug.txt  pskc-hotp-human.txt  pskc-hotp-signed.xml  pskc-hotp.xml  pskc2csv.c  pskccreate.c  pskcsign.c  pskctool-h.txt  pskcverify.c  serialno.c
libpskc/gl/: Makefile.am  anytostr.c  base64.c  base64.h  intprops.h  inttostr.h  minmax.h  strverscmp.c
libpskc/gl/m4/: gnulib-cache.m4  gnulib-comp.m4
libpskc/gl/tests/: Makefile.am
libpskc/gtk-doc/: Makefile.am  libpskc-docs.sgml
libpskc/include/: Makefile.am
libpskc/include/pskc/: Makefile.am  container.h  enums.h  errors.h  exports.h  global.h  keypackage.h  pskc.h  version.h.in
libpskc/man/: Makefile.am  gdoc  gdoc.mk
libpskc/schemas/: Makefile.am  pskc-schema.xsd
libpskc/tests/: Makefile.am  libpskc.supp  tst_accessors.c  tst_basic.c  tst_errors.c  tst_setters.c  tst_validate.c
m4/: gnulib-cache.m4  gnulib-comp.m4
oathtool/: Makefile.am  configure.ac  oathtool.c  oathtool.ggo  oathtool.h2m
oathtool/gl/: Makefile.am  mktime.c  msvc-inval.c  msvc-inval.h  printf-parse.c  stdio.in.h
oathtool/gl/m4/: gnulib-cache.m4  gnulib-comp.m4
oathtool/gl/tests/: Makefile.am
oathtool/lib/: Makefile.am  errno.in.h  malloca.c  mktime.c  msvc-nothrow.c  printf-args.h  printf-parse.c  printf-parse.h  stdint.in.h  stdio.in.h  string.in.h  sys_time.in.h  vasnprintf.c  vasnprintf.h  wchar.in.h
oathtool/m4/: gnulib-cache.m4  gnulib-comp.m4
oathtool/tests/: Makefile.am  tst_hyphen.sh  tst_oathtool.sh
pam_hotp/: Makefile.am  README  configure.ac  pam_hotp.c
pam_hotp/tests/: Makefile.am  test-pam_hotp.c
pam_oath/: Makefile.am  README  configure.ac  pam_oath.c
pam_oath/tests/: Makefile.am  expect.oath  run-root-tests.sh  test-pam_oath-root.c  test-pam_oath.c
pskctool/: Makefile.am  configure.ac  pskctool.c  pskctool.ggo  pskctool.h2m
pskctool/gl/: Makefile.am
pskctool/gl/m4/: gnulib-cache.m4  gnulib-comp.m4
pskctool/gl/tests/: Makefile.am
pskctool/tests/: 20120919-test001-4282.xml  Makefile.am  pskc-all-human.txt  pskc-all-signed.xml  pskc-all.xml  pskc-ee-crt.pem  pskc-figure10.xml  pskc-figure2-ns.xml  pskc-figure2.xml  pskc-figure3.xml  pskc-figure6.xml  pskc-figure8.xml  pskc-figure9.xml  pskc-ocra.xml  pskc-root-crt.pem  tst_hyphen.sh  tst_libexamples.sh  tst_pskctool.sh  tst_roundtrip.sh  tst_sign.sh
website/: build-website.sh  config.cfg  docs.txt  download.txt  index.txt  intro.txt  layout.css  oath-toolkit.xsl  style.css
